--- a/base_file/styles.css
+++ b/base_file/styles.css
@@ -1,32 +1,42 @@
 /* 
-  This is a SAMPLE File to get you started. Follow the instructions on the project to complete the tasks. 
-  You'll probably need to override some of theese styles.
+    This is a SAMPLE File to get you started. Follow the instructions on the project to complete the tasks. 
+    You'll probably need to override some of these styles.
 */
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
 }
 
 body {
-    background-color: #f4f4f4;
-    color: #333;
+        background-color: #f4f4f4;
+        color: #333;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
+        background-color: #333;
+        color: #fff;
+        padding: 1rem;
 }
 
 nav a {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 1rem;
+        color: #fff;
+        text-decoration: none;
+        margin-left: 1rem;
 }
 
 main {
-    padding: 2rem;
+        padding: 2rem;
+}
+
+/* Fixed Parameters */
+
+.place-card,
+.review-card {
+        margin: 20px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
 }
