--- a/base_file/styles.css
+++ b/base_file/styles.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 }
 
 body {
@@ -22,7 +22,7 @@ body {
   /* Header y Nav */
 
 header {
-    background-color: #8c40ad;
+    background-color: #099b4b;;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -39,7 +39,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    background-color: #8e44ad;
+    background-color: #099b4b;
 }
 
 nav a {
@@ -50,7 +50,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #7a288a;
+    background-color: #099b4b;
 }
 
   /* Buttons */
@@ -140,7 +140,7 @@ footer {
     justify-content: center;
     align-items: center;
     padding: 10px 20px;
-    background-color: #7a288a;
+    background-color: #099b4b;
     border-top: 1px solid #ddd;
     color: #fff;
 }
